K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reposhield-service
  namespace: scdproject
spec:
  selector:
    app: reposhield
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
